--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,10 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
+    <string name="google_maps_key">AIzaSyA_5gVAJoSAip3RrQh9s8Mvk9Ru3zChwiQ</string>
+
+
+
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
         volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
